--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI="mongodb://localhost:27017"
+# MONGODB_URI="mongodb://localhost:27017"
+MONGODB_URI=mongodb+srv://abcusman100_db_user:XYNg0JUd6xdloamf@projects.hzxpkvs.mongodb.net/?appName=Projects
 
 JWT_KEY=bhsbbsbsuubsbjbkbkjsbjkbjdsbjbvjksbkjfdvjkbdj534564d65fvd
